# Cpp_tool

./: .gitignore  README.md
 BareMetalScheduler/: README.md
 baremetal_scheduler/inc/: scheduler.h
 baremetal_scheduler/src/: scheduler.c
MjpegStreamer/: CMakeLists.txt  MjpegStreamer.cpp  main.cpp
MjpegStreamer/lib/: MjpegStreamer.h
StateMachine/: CMakeLists.txt  main.cpp
StateMachine/lib/: Door.h  StateMachine.h
